--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@react-native-async-storage/async-storage": "^1.22.3",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-navigation/bottom-tabs": "^6.5.18",
-    "@react-navigation/native": "^6.1.15",
+    "@react-navigation/native": "^6.1.16",
+    "@react-navigation/stack": "^6.3.28",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-appearance": "^0.0.0",
