--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.22.3",
+    "@react-native-community/geolocation": "^3.2.0",
     "@react-native-community/viewpager": "^5.0.11",
+    "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^6.5.18",
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/stack": "^6.3.28",
@@ -20,6 +22,7 @@
     "react-native-appearance": "^0.0.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.8.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
